# Kool-Edit

./: .gitignore  Cargo.toml  Makefile  README.md  drum_machine.md
engine/: Cargo.toml
engine/src/: dsl.rs  dsp.rs  edit_list.rs  effect.rs  engine.rs  envelope.rs  ids.rs  kepz.rs  lib.rs  mixdown.rs  nr.rs  op.rs  peaks.rs  project.rs  range.rs  source.rs  spectral.rs  stft.rs  tempo.rs  wav.rs
engine/src/dsl/: emit.rs  lex.rs  mod.rs  parse.rs
engine/src/storage/: memory.rs  mod.rs  native.rs
kool-edit-design-docs/kool-edit-docs/: 01-feature-spec.md  02-architecture.md  03-data-model.md  04-dsl-grammar.md  CONTENTS.md
scripts/: smoke-wasm.mjs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/public/: playback-worklet.js
ui/src/: arranger.ts  drums.ts  editor.ts  main.ts  spectrogram.ts  styles.css  waveform.ts
ui/src/audio/: playback.ts  ring-buffer.ts
ui/src/engine/: client.ts  protocol.ts  worker.ts
